null 000 database (#2)
* chore: cleanup README.md, cleanup main.go and routes.go for linter

* chore: updated go.mod go.sum

* chore: support ticket numbers with single digits

* feat: add crud rest endpoints that use a database, database migrations, and updated documentation

* chore: add updated go.sum

* fix: remove install gin step

* chore: remove debug logic
